# zengine

./: CMakeLists.txt
res/: main.glslv
src/: Z-Engine.cpp
src/graphics/: Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Texture.cpp  Texture.h
src/loaders/: Png-Loader.cpp  Png-Loader.h
src/objects/: Circle.h  Cube.h  Draw-Object.cpp  Draw-Object.h  Object.h  Objects.cpp  Objects.h
src/voxels/: Block.h  Voxel.cpp  Voxel.h
src/window/: Events.cpp  Events.h  Window.cpp  Window.h
